@startuml

title Diamond A

interface TraitA_Ex6 {
 Unit +greet()
}
interface TraitB_Ex6 {
 override Unit +greet()
}
interface TraitC_Ex6{
 override Unit +greet()
}

TraitB_Ex6 <|-- TraitA_Ex6
TraitC_Ex6 <|-- TraitA_Ex6

class ClassA_Ex6

ClassA_Ex6 <|-- TraitB_Ex6
ClassA_Ex6 <|-- TraitC_Ex6

note top of ClassA_Ex6:class ClassA_Ex6 extends TraitB_Ex6 with TraitC_Ex6

@enduml